SLW-000 | Fixed broken css after merge.

--- a/themes/custom/c2d_theme/css/components.css
+++ b/themes/custom/c2d_theme/css/components.css
@@ -3878,94 +3878,6 @@ body.fixed .block-country-navigation {
   line-height: 2.5rem;
 }
 
-/*.paragraph--type--text-media {
-  .paragraph--inner {
-    @include flex;
-    @include flex-direction(column);
-    @include justify-content(center);
-    @include width-1105;
-
-    @include breakpoint(medium) {
-      @include flex-direction(row);
-      .left,
-      .right {
-        width: 50%;
-      }
-    }
-  }
-
-  .right {
-    .text-formatted p a {
-      color: $color-secondary;
-      text-decoration: underline;
-
-      &:hover {
-        text-decoration: none;
-      }
-    }
-  }
-
-  &.paragraph--view-mode--invers {
-    .right {
-      @include flex-order(-1);
-
-      @include breakpoint(medium) {
-        @include flex-order(2);
-      }
-    }
-
-    .left {
-      @include breakpoint(medium) {
-        padding-right: 5.5rem;
-      }
-    }
-  }
-
-  &.paragraph--view-mode--default {
-    .right {
-      @include breakpoint(medium) {
-        padding-left: 5.5rem;
-      }
-    }
-  }
-
-  iframe {
-    width: 100%;
-    min-height: 30rem;
-  }
-
-  .field--name-field-media {
-    margin-bottom: 3rem;
-
-    @include breakpoint(medium) {
-      margin-bottom: 0;
-    }
-  }
-
-  .field--name-field-link {
-    margin-top: 4rem;
-
-    a {
-      @include font-open-18;
-
-      position: relative;
-      padding-left: 3rem;
-      text-decoration: underline;
-
-      &:before {
-        content: url("/themes/custom/c2d_theme/images/dist/icons/arrow-right.svg");
-        position: absolute;
-        top: 0.2rem;
-        left: 0;
-        padding-right: 15px;
-      }
-
-      &:hover {
-        text-decoration: none;
-      }
-    }
-  }
-}*/
 .paragraph--type--cta {
   text-align: center;
 }
@@ -4003,155 +3915,6 @@ body.fixed .block-country-navigation {
   color: #ffffff;
 }
 
-.paragraph--type--small-boxes {
-  padding-top: 0;
-}
-.paragraph--type--small-boxes > .paragraph--inner {
-  position: relative;
-  padding-top: 10rem;
-}
-.paragraph--type--small-boxes > .paragraph--inner > .field--name-field-title {
-  font-family: "Montserrat", sans-serif !important;
-  font-size: 2.4rem;
-  font-weight: 700;
-  color: #ffffff;
-  background-color: #12284c;
-  padding: 0.2rem 0;
-  margin-top: -2.3rem;
-  margin-left: 2rem;
-  box-shadow: 2.6rem 0 0 #12284c, -1.9rem 0 0 #12284c;
-  -webkit-box-decoration-break: clone;
-          box-decoration-break: clone;
-  line-height: 5rem;
-  position: absolute;
-  top: 0;
-  left: 1.5rem;
-  margin-top: -1.7rem;
-  padding: 0;
-  line-height: 3.5rem;
-}
-@media print, screen and (min-width: 64em) {
-  .paragraph--type--small-boxes > .paragraph--inner > .field--name-field-title {
-    font-size: 3.6rem;
-  }
-}
-.paragraph--type--small-boxes > .paragraph--inner .field--name-field-paragraphs {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: center;
-  margin: 0 -0.7rem;
-}
-@media print, screen and (min-width: 48em) {
-  .paragraph--type--small-boxes > .paragraph--inner .field--name-field-paragraphs {
-    flex-direction: row;
-  }
-}
-.paragraph--type--small-boxes > .paragraph--inner .field--name-field-paragraphs > .field__item {
-  width: 100%;
-  margin-bottom: 1.4rem;
-  padding: 0 0.7rem;
-}
-@media print, screen and (min-width: 48em) {
-  .paragraph--type--small-boxes > .paragraph--inner .field--name-field-paragraphs > .field__item {
-    width: 33%;
-  }
-}
-.paragraph--type--small-boxes .paragraph--type--small-box {
-  border: 0.1rem solid #efefef;
-  background-color: #ffffff;
-}
-.paragraph--type--small-boxes .paragraph--type--small-box .paragraph--inner {
-  position: relative;
-}
-.paragraph--type--small-boxes .paragraph--type--small-box .paragraph--inner span,
-.paragraph--type--small-boxes .paragraph--type--small-box .paragraph--inner a {
-  transition: color, 0.2s;
-  display: flex;
-  justify-content: center;
-  -mox-box-align: center;
-  align-items: center;
-  width: 100%;
-  height: 11.3rem;
-  padding: 2rem;
-  font-family: "Montserrat", sans-serif;
-  font-size: 1.4rem;
-  font-weight: 700;
-  line-height: 2rem;
-}
-@media print, screen and (min-width: 48em) {
-  .paragraph--type--small-boxes .paragraph--type--small-box .paragraph--inner span,
-.paragraph--type--small-boxes .paragraph--type--small-box .paragraph--inner a {
-    justify-content: flex-start;
-  }
-}
-.paragraph--type--small-boxes .paragraph--type--small-box .paragraph--inner a:hover {
-  color: #26c9de;
-}
-
-/*.paragraph--type--accordion {
-  > .paragraph--inner > .field--name-field-text {
-    margin-bottom: 3rem;
-  }
-
-  .paragraph--type--item {
-    margin-bottom: 3rem;
-    border-bottom: 1px solid rgba($color-blue-darkest, 0.4);
-
-    .field--name-field-title {
-      position: relative;
-      padding-right: 4rem;
-      font-size: 1.8rem;
-      cursor: pointer;
-
-      &:after {
-        @include transition(all, 0.2s);
-
-        content: url("/themes/custom/c2d_theme/images/dist/icons/chevron-down.svg");
-        position: absolute;
-        top: -3px;
-        right: -6px;
-        width: 3.2rem;
-        height: 3.2rem;
-      }
-    }
-
-    &.empty {
-      .field--name-field-title {
-        cursor: default;
-
-        &::after {
-          content: '';
-        }
-      }
-    }
-
-    .open .field--name-field-title:after {
-      @include rotate(180);
-    }
-
-    .field--name-field-text {
-      @include transition(all, 0.2s);
-
-      height: 0;
-      overflow: hidden;
-    }
-
-    .paragraph--inner.open .field--name-field-text {
-      height: auto;
-      padding-bottom: 2.5rem;
-      overflow: auto;
-    }
-  }
-
-  .field__item:last-child {
-    .paragraph--type--item {
-      margin-bottom: 0;
-      padding-bottom: 0;
-      border-bottom: 0;
-    }
-  }
-}*/
 .paragraph--type--media-document {
   font-family: "Montserrat", sans-serif;
 }
